--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,11 +33,38 @@
         <img src="plant.png" id="plant">
     </section>
 
-    <section class="sec">
+    <section class="sec_contact">
         <h2>POLY CAR INFOMATION</h2>
-        <p>
-        Lorem ipsum dolor sit amet. Sit dolore nemo vel exercitationem laborum in tempore dicta. Ut sint facere est velit consequatur eos nobis laudantium ut labore tempore aut aliquid vitae. Id perspiciatis rerum rem corrupti velit nam error mollitia et nostrum quibusdam aut unde mollitia et quod ipsa aut fuga nemo. </p><p>Qui dolores velit sed possimus deserunt et autem Quis sed voluptatum exercitationem cum voluptatum corporis ea dolores obcaecati qui sunt consequatur. Sit eaque error et aperiam beatae quo unde nisi. </p><p>Eum natus pariatur cum iusto pariatur est iusto nemo et autem sequi eos iste blanditiis eos dolorem sunt et odio soluta. Et doloremque quam aut saepe vitae et cupiditate impedit quo dolorem fugit. Aut tempore enim et repellendus galisum et culpa perferendis nam distinctio cupiditate? Sit perspiciatis repudiandae et omnis autem est doloribus blanditiis ut pariatur consectetur. </p><p>Non voluptatem quae et corrupti quas id internos repudiandae et dolorem corrupti eos sint quaerat et omnis autem. Qui tempore eligendi aut neque nulla et totam cumque rem Quis quasi ut libero autem est voluptatem reiciendis in dolorum minus? Ex facere doloribus eos velit minima eum eaque ipsum et eligendi possimus id labore laudantium. </p><p>Et galisum inventore rem reprehenderit quasi ut nobis libero aut odio libero. Ut adipisci voluptate qui odit cumque hic blanditiis voluptates et omnis aliquid. </p><p>Qui labore dignissimos et omnis totam et vitae recusandae et maiores possimus sed illo similique et adipisci enim. Et rerum magni qui itaque quae sed pariatur asperiores? Et ipsum quisquam 33 blanditiis deleniti in laborum nulla in veritatis voluptatem ut excepturi iusto. </p><p>Eos quam temporibus ad quis unde eos dolorem accusantium. Ut consequatur temporibus ut nobis voluptas sit incidunt praesentium quo ratione alias. </p><p>Est minus autem qui odio molestiae qui voluptates voluptatem et voluptas repellendus id voluptas repellat et tempore inventore. Sed molestias ipsum id voluptate voluptatem et ullam aperiam. Et officia autem eos iure laboriosam quo consequatur blanditiis qui dolorum veniam. </p><p>Ad deserunt delectus hic dolor magnam non dolore laboriosam. Nam error nemo est quas voluptatem vel aliquam beatae vel itaque architecto et totam corrupti. Id animi distinctio et autem veritatis ut distinctio explicabo et laboriosam magni in animi culpa 33 inventore atque in nesciunt saepe. </p><p>Id iure eveniet et voluptatem delectus et nostrum nulla sit possimus enim eum galisum dolorem. Et itaque omnis est aspernatur tempora non doloribus laudantium?<br><br>
-        </p>
+          <firgue class="card_contact">
+            <div class="image"><img src="slide1.png" alt=""></div>
+            <figcaption>
+              <h3>FACEBOOK</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+              </p>           
+            </figcaption>
+            <a href="#">READMORE</a>
+          </firgue>
+          <firgue class="card_contact">
+            <div class="image"><img src="slide2.png" alt=""></div>
+            <figcaption>
+              <h3>ZALO</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+              </p>           
+            </figcaption>
+            <a href="#">READMORE</a>
+          </firgue>
+          <firgue class="card_contact">
+            <div class="image"><img src="slide3.png" alt=""></div>
+            <figcaption>
+              <h3>ACEDEMY PORT</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+              </p>           
+            </figcaption>
+            <a href="#">READMORE</a>
+          </firgue>
     </section>
 
     <footer>
