--- a/contact.html
+++ b/contact.html
@@ -40,30 +40,34 @@
             <figcaption>
               <h3>FACEBOOK</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+                - Facebook cá nhân: dangkh0a2004
+                <br>
+                - Fanpage Ứng dụng: 
               </p>           
             </figcaption>
-            <a href="#">READMORE</a>
+            <a href="https://www.facebook.com/dangkh0a2004">READMORE</a>
           </firgue>
           <firgue class="card_contact">
             <div class="image"><img src="slide2.png" alt=""></div>
             <figcaption>
               <h3>ZALO</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+                - Zalo cá nhân: 0869.938.981
+                <br>
+                - Zalo nhóm người dùng: PRO1041 - NHÓM 6 - IT18301
               </p>           
             </figcaption>
-            <a href="#">READMORE</a>
+            <a href="https://zaloweb.me/">READMORE</a>
           </firgue>
           <firgue class="card_contact">
             <div class="image"><img src="slide3.png" alt=""></div>
             <figcaption>
               <h3>ACEDEMY PORT</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem obcaecati repellendus rem hic, dolor, officia, quod atque praesentium maxime voluptatibus iusto sequi. Dicta error harum, perspiciatis tempore similique sint expedita.
+                - Đ/C: 271 Lê Thánh Tông, phường Máy Chai, quận Ngô Quyền, TP Hải Phòng.
               </p>           
             </figcaption>
-            <a href="#">READMORE</a>
+            <a href="https://ap.poly.edu.vn/">READMORE</a>
           </firgue>
     </section>
 
