xóa popup -- > html

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <h2 class="logo">POLYCAR</h2>
         <nav class="navigation">
             <a href="#" onclick="redirectToTrangChu()">TRANG CHỦ</a>
-            <a href="#" onclick="openPopup()">THÔNG TIN</a>
+            <a href="#" onclick="redirectToThongtin()">THÔNG TIN</a>
             <a href="#" onclick="redirectToDichVu()">DỊCH VỤ</a>
             <a href="#" class="active" >LIÊN HỆ</a>
         </nav>
@@ -100,11 +100,6 @@
           </div>
         </div>
       </footer>
-      
-      <div id="popup" class="popup">
-        
-        <button onclick="closePopup()">CLOSE</button>
-    </div>
 
     <script src="script.js"></script>
 </body>
