--- a/dichvu.html
+++ b/dichvu.html
@@ -16,7 +16,7 @@
         <h2 class="logo">POLYCAR</h2>
         <nav class="navigation">
             <a href="#" onclick="redirectToTrangChu()">TRANG CHỦ</a>
-            <a href="#" onclick="openPopup()">THÔNG TIN</a>
+            <a href="#" onclick="redirectToThongtin()">THÔNG TIN</a>
             <a href="#" class="active">DỊCH VỤ</a>
             <a href="#" onclick="redirectToContact()">LIÊN HỆ</a>
         </nav>
@@ -71,14 +71,6 @@
         </div>
       </footer>
       
-      <div id="popup" class="popup">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><br>
-          Aliquam vel aliquid magni iste harum recusandae, blanditiis voluptatum tenetur repudiandae deserunt expedita ea hic cum temporibus nisi atque eveniet, cupiditate suscipit alias! Deserunt, veniam, eveniet laborum pariatur consequuntur similique libero quidem vero molestiae harum voluptates modi tempore enim at ullam aspernatur molestias.<br><br>
-          Nemo delectus quidem mollitia asperiores, rerum atque nesciunt aliquam tempore exercitationem, assumenda dolore tenetur officia aut vero ratione. Ad labore ipsam debitis velit odio voluptatem nulla officiis ducimus fuga eum, consequuntur minus distinctio nisi iste sit, nihil voluptatibus eveniet. Assumenda quidem consequatur voluptatibus amet, mollitia maxime dignissimos,<br><br>
-          quo recusandae illo placeat nesciunt eligendi dicta incidunt totam ad magnam cumque ipsum sint aperiam animi cum, eaque in tempore! Aut, doloribus!</p>
-        <button onclick="closePopup()">CLOSE</button>
-    </div>
-
     <script src="script.js"></script>
 </body>
 
