--- a/thongtin.html
+++ b/thongtin.html
@@ -15,8 +15,8 @@
     <header>
         <h2 class="logo">POLYCAR</h2>
         <nav class="navigation">
-            <a href="#" class="active" onclick="redirectToTrangChu()">TRANG CHỦ</a>
-            <a href="#" onclick="redirectToThongtin()">THÔNG TIN</a>
+            <a href="#" onclick="redirectToTrangChu()">TRANG CHỦ</a>
+            <a href="#" class="active">THÔNG TIN</a>
             <a href="#" onclick="redirectToDichVu()">DỊCH VỤ</a>
             <a href="#" onclick="redirectToContact()">LIÊN HỆ</a>
         </nav>
@@ -70,7 +70,7 @@
           </div>
         </div>
       </footer>
-
+      
     <script src="script.js"></script>
 </body>
 
