--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -77,7 +76,6 @@
             <a href="#" onclick="redirectToContact()">LIÊN HỆ</a>
         </nav>
     </header>
-
     <section class="parallax">
         <img src="hill1.png" id="hill1">
         <img src="hill2.png" id="hill2">
@@ -89,7 +87,6 @@
         <img src="leaf.png" id="leaf">
         <img src="plant.png" id="plant">
     </section>
-
     <section class="sec">
       <h2>POLY CAR INFOMATION</h2>
       <h1 style="color: white;">BAN LÃNH ĐẠO CẤP CAO</h1>
@@ -126,7 +123,6 @@
     </div>
 
     </section>
-    
     <footer>
         <div class="footer-left">
           <div class="logo-container">
@@ -156,8 +152,8 @@
           </div>
         </div>
       </footer>
+    <script src="script.js">
 
-    <script src="script.js"></script>
+    </script>
 </body>
-
 </html>
