--- a/index.html
+++ b/index.html
@@ -105,13 +105,16 @@
             <p class="card_subtitle">Phụ trách chính quản lý công tác hoàn thiện code phần mềm.</p>
           </div>
         </div>
-        <div class="card">
-          <img src="dangkhoa.jpg" class="card_img" alt="">
-          <div class="card_body">
-            <h1 class="card_title">DISPLAY</h1>
-            <p class="card_subtitle">Bàn giao và thiết kế chính cho phần mềm.</p>
+        <a href="https://dangkhoa2004.github.io/MY-PROFILE/">
+          <div class="card">
+              <img src="dangkhoa.jpg" class="card_img" alt="">
+              <div class="card_body">
+                  <h1 class="card_title">DISPLAY</h1>
+                  <p class="card_subtitle">Bàn giao và thiết kế chính cho phần mềm.</p>
+              </div>
           </div>
-        </div>
+      </a>
+      
         <div class="card">
           <img src="quangvinh.jpg" class="card_img" alt="">
           <div class="card_body">
