--- a/dichvu.html
+++ b/dichvu.html
@@ -9,7 +9,33 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image/x-icon">
 </head>
+<style>
+  h1 {
+    color: white;
+  }
+  .icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+        }
+        .icon-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 
+    .icon p {
+        text-align: center;
+        margin: 0;
+    }
+
+    hr {
+        width: 100%;
+        margin-top: 20px;
+        border: none;
+        border-top: 1px solid #ccc;
+    }
+</style>
 <body>
     
     <header>
@@ -36,9 +62,49 @@
 
     <section class="sec">
         <h2>POLY CAR INFOMATION</h2>
-        <p>
-        Lorem ipsum dolor sit amet. Sit dolore nemo vel exercitationem laborum in tempore dicta. Ut sint facere est velit consequatur eos nobis laudantium ut labore tempore aut aliquid vitae. Id perspiciatis rerum rem corrupti velit nam error mollitia et nostrum quibusdam aut unde mollitia et quod ipsa aut fuga nemo. </p><p>Qui dolores velit sed possimus deserunt et autem Quis sed voluptatum exercitationem cum voluptatum corporis ea dolores obcaecati qui sunt consequatur. Sit eaque error et aperiam beatae quo unde nisi. </p><p>Eum natus pariatur cum iusto pariatur est iusto nemo et autem sequi eos iste blanditiis eos dolorem sunt et odio soluta. Et doloremque quam aut saepe vitae et cupiditate impedit quo dolorem fugit. Aut tempore enim et repellendus galisum et culpa perferendis nam distinctio cupiditate? Sit perspiciatis repudiandae et omnis autem est doloribus blanditiis ut pariatur consectetur. </p><p>Non voluptatem quae et corrupti quas id internos repudiandae et dolorem corrupti eos sint quaerat et omnis autem. Qui tempore eligendi aut neque nulla et totam cumque rem Quis quasi ut libero autem est voluptatem reiciendis in dolorum minus? Ex facere doloribus eos velit minima eum eaque ipsum et eligendi possimus id labore laudantium. </p><p>Et galisum inventore rem reprehenderit quasi ut nobis libero aut odio libero. Ut adipisci voluptate qui odit cumque hic blanditiis voluptates et omnis aliquid. </p><p>Qui labore dignissimos et omnis totam et vitae recusandae et maiores possimus sed illo similique et adipisci enim. Et rerum magni qui itaque quae sed pariatur asperiores? Et ipsum quisquam 33 blanditiis deleniti in laborum nulla in veritatis voluptatem ut excepturi iusto. </p><p>Eos quam temporibus ad quis unde eos dolorem accusantium. Ut consequatur temporibus ut nobis voluptas sit incidunt praesentium quo ratione alias. </p><p>Est minus autem qui odio molestiae qui voluptates voluptatem et voluptas repellendus id voluptas repellat et tempore inventore. Sed molestias ipsum id voluptate voluptatem et ullam aperiam. Et officia autem eos iure laboriosam quo consequatur blanditiis qui dolorum veniam. </p><p>Ad deserunt delectus hic dolor magnam non dolore laboriosam. Nam error nemo est quas voluptatem vel aliquam beatae vel itaque architecto et totam corrupti. Id animi distinctio et autem veritatis ut distinctio explicabo et laboriosam magni in animi culpa 33 inventore atque in nesciunt saepe. </p><p>Id iure eveniet et voluptatem delectus et nostrum nulla sit possimus enim eum galisum dolorem. Et itaque omnis est aspernatur tempora non doloribus laudantium?<br><br>
-        </p>
+        <div class="dacdiem">
+          <br><hr><br>
+          <h1>ĐẶC ĐIỂM</h1>
+          <br>
+          <div class="left">
+            <p>Tên xe</p>
+          </div>
+          <br>
+          <div class="mid">
+            <p>Số ghế</p>
+          </div>
+          <br>
+          <div class="right">
+            <p>Tình trạng</p>
+          </div>
+        </div>
+        <div class="mota">
+          <br><hr><br>
+          <h1>Mô tả</h1>
+          <br>
+          <p>Mã xe, Tên xe, Ảnh xe, Loại xe, ....</p>
+        </div>
+        <div class="tiennghi">
+          <br><hr><br>
+          <h1>Các tiện nghi khác</h1><br>
+          <div class="icon-container">
+            <p><img class="icon" src="icon_services/map.png" alt="Bluetooth"> Bản đồ</p>
+            <p><img class="icon" src="icon_services/bluetooth.png" alt="Bluetooth"> Bluetooth</p>
+            <p><img class="icon" src="icon_services/camera.png" alt="Camera hành trình"> Camera hành trình</p>
+            <p><img class="icon" src="icon_services/camera-360.png" alt="Bluetooth"> Camera lùi</p>
+            <p><img class="icon" src="icon_services/tire-pressure.png" alt="Bluetooth"> Cảm biến lốp</p>
+            <p><img class="icon" src="icon_services/motion-sensor.png" alt="Bluetooth"> Cảm biến va chạm</p>
+            <p><img class="icon" src="icon_services/speedometer.png" alt="Bluetooth"> Cảnh báo tốc độ</p>
+            <p><img class="icon" src="icon_services/sunroof.png" alt="Bluetooth"> Cửa sổ trời</p>
+            <p><img class="icon" src="icon_services/location.png" alt="Bluetooth"> Định vị GPS</p>
+            <p><img class="icon" src="icon_services/usb-drive.png" alt="Bluetooth"> Khe cắm USB</p>
+            <p><img class="icon" src="icon_services/tires.png" alt="Bluetooth"> Lốp dự phòng</p>
+            <p><img class="icon" src="icon_services/dvd-player.png" alt="Bluetooth"> Màn hình DVD</p>
+            <p><img class="icon" src="icon_services/ETC.png" alt="Bluetooth"> ETC</p>
+            <p><img class="icon" src="icon_services/air.png" alt="Bluetooth"> Túi khí an toàn</p>
+            <hr>
+        </div>
+        </div>
     </section>
 
     <footer>
